--- a/assets/sass/_contact.scss
+++ b/assets/sass/_contact.scss
@@ -96,6 +96,7 @@
   #contact {
     form {
       width: 320px;
+      height: 250px;
     }
   }
 }
